Moving fonts locally

--- a/common/common.scss
+++ b/common/common.scss
@@ -1,4 +1,15 @@
 // Font
+
+@font-face {
+  font-family: 'HankenGroteskRegular';
+  src: url($HKGroteskRegular);
+}
+
+@font-face {
+  font-family: 'HKGroteskLight';
+  src: url($HKGroteskLight);
+}
+
 body {
   font-family: "HankenGroteskRegular", sans-serif;
   overflow-x: hidden;
