--- a/common/common.scss
+++ b/common/common.scss
@@ -760,7 +760,7 @@ a.mention-group {
   color: white;
 }
 
-.cooked {
+.moderator .regular>.cooked {
   background-color: #333333c4;
   padding: 10px;
   color: white;
