--- a/common/common.scss
+++ b/common/common.scss
@@ -261,7 +261,7 @@ nav.post-controls a,
 nav.post-controls button,
 nav.post-controls .like-button .like-count,
 .topic-meta-data .post-info a {
-  color: #ffffff;
+  color: #8dabff;
 }
 
 span.post-count {
